--- a/notebooks/HuggingFace_DistilBERT.ipynb
+++ b/notebooks/HuggingFace_DistilBERT.ipynb
@@ -1,19 +1,46 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "1fa9caea",
+   "cell_type": "markdown",
+   "id": "ccdfc6ea",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from pathlib import Path"
+    "#### Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "57df120b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
+    "from datasets import Dataset\n",
+    "\n",
+    "from transformers import (\n",
+    "    AutoTokenizer,\n",
+    "    AutoModelForSequenceClassification,\n",
+    "    TrainingArguments,\n",
+    "    Trainer,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf90a4e0",
+   "metadata": {},
+   "source": [
+    "#### Import Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "981a3621",
    "metadata": {},
    "outputs": [],
@@ -23,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "id": "f0c035e1",
    "metadata": {},
    "outputs": [],
@@ -35,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "id": "8baaafd8",
    "metadata": {},
    "outputs": [],
@@ -45,55 +72,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "6e5f0e87",
+   "cell_type": "markdown",
+   "id": "8b9b96ce",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
-    "\n",
-    "from datasets import Dataset\n",
-    "from transformers import (\n",
-    "    AutoTokenizer,\n",
-    "    AutoModelForSequenceClassification,\n",
-    "    TrainingArguments,\n",
-    "    Trainer,\n",
-    ")\n"
+    "#### Setting Hyperparameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "id": "e98f1762",
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_NAME = \"distilbert-base-uncased\"  # you can later try \"roberta-base\"\n",
-    "MAX_LEN = 256                           # 256 is faster; use 512 if you have long comments/compute\n",
-    "OUTPUT_DIR = \"out\"                      # saved model/checkpoints\n",
-    "RANDOM_SEED = 42\n"
+    "MODEL_NAME = \"distilbert-base-uncased\"  # Pretrained model from the HuggingFace Hub\n",
+    "MAX_LEN = 256                           # Sequence length for the tokenizer\n",
+    "RANDOM_SEED = 42"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9556ab8",
+   "metadata": {},
+   "source": [
+    "#### Preparing Input "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "b2568e31",
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import List, Dict, Tuple\n",
-    "from transformers import AutoTokenizer\n",
     "\n",
-    "def _clean(s):\n",
+    "def _clean(s): # Returns a trimmed string; if the value is missing/NaN it returns \"\"\n",
     "    if pd.isna(s):\n",
     "        return \"\"\n",
     "    return str(s).strip()\n",
     "\n",
-    "def _to_list(*vals) -> List[str]:\n",
+    "def _to_list(*vals) -> List[str]:  # Accepts any number of arguments & Returns a list of examples\n",
     "    out = []\n",
     "    for v in vals:\n",
     "        v = _clean(v)\n",
@@ -101,6 +121,7 @@
     "            out.append(v)\n",
     "    return out\n",
     "\n",
+    "# Defines the layout to the tokenizer/model\n",
     "TEMPLATE_RULE = \"RULE: {rule}\"\n",
     "TEMPLATE_POS = \"POS: {examples}\"\n",
     "TEMPLATE_NEG = \"NEG: {examples}\"\n",
@@ -124,6 +145,7 @@
     "                  neg_keep: int = 1,\n",
     "                  extra_pos_keep: int = 1,\n",
     "                  extra_neg_keep: int = 1) -> Tuple[List[str], List[str]]:\n",
+    "    \n",
     "    # pre-shorten examples to keep them compact\n",
     "    pos_short = [shorten_text_by_chars(p or \"\", 120) for p in (pos or []) if (p or \"\").strip()]\n",
     "    neg_short = [shorten_text_by_chars(n or \"\", 120) for n in (neg or []) if (n or \"\").strip()]\n",
@@ -161,6 +183,7 @@
     "    primary, extras = make_segments(rule, pos, neg, comment)\n",
     "\n",
     "    assembled: List[str] = []\n",
+    "\n",
     "    for seg in primary:\n",
     "        tentative = \"\\n\".join(assembled + [seg])\n",
     "        ids = tokenizer(tentative, add_special_tokens=True, truncation=False)[\"input_ids\"]\n",
@@ -190,7 +213,7 @@
     "            break\n",
     "\n",
     "    text = \"\\n\".join(assembled)\n",
-    "    return tokenizer(text, add_special_tokens=True, truncation=True, max_length=max_length)\n"
+    "    return tokenizer(text, add_special_tokens=True, truncation=True, max_length=max_length)"
    ]
   },
   {
@@ -295,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "4c22b2f6",
    "metadata": {},
    "outputs": [
@@ -368,6 +391,7 @@
     "        comment=_clean(batch.get(\"body\")),\n",
     "        max_length=MAX_LEN,\n",
     "    )\n",
+    "    \n",
     "    # keep row_id for writing back predictions later\n",
     "    enc[\"row_id\"] = int(batch.get(\"row_id\")) if pd.notna(batch.get(\"row_id\")) else -1\n",
     "    # if test also has labels, we’ll use them (optional)\n",
@@ -382,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "68ba68a6",
    "metadata": {},
    "outputs": [
@@ -575,7 +599,6 @@
     "model = AutoModelForSequenceClassification.from_pretrained(MODEL_NAME, num_labels=2)\n",
     "\n",
     "args = TrainingArguments(\n",
-    "    output_dir=OUTPUT_DIR,\n",
     "    learning_rate=5e-5,\n",
     "    per_device_train_batch_size=8,\n",
     "    per_device_eval_batch_size=8,\n",
