Using Hugging Face Model DistilBERT v2

--- a/notebooks/HuggingFace_DistilBERT.ipynb
+++ b/notebooks/HuggingFace_DistilBERT.ipynb
@@ -121,15 +121,17 @@
     "            out.append(v)\n",
     "    return out\n",
     "\n",
-    "# Defines the layout to the tokenizer/model\n",
+    "# Defines the layout to the tokenizer/model; This template helps it learn “compare the COMMENT against the RULE with POS/NEG anchors\n",
     "TEMPLATE_RULE = \"RULE: {rule}\"\n",
     "TEMPLATE_POS = \"POS: {examples}\"\n",
     "TEMPLATE_NEG = \"NEG: {examples}\"\n",
     "TEMPLATE_COMMENT = \"COMMENT: {comment}\"\n",
     "\n",
+    "# Concatenates the cleaned examples, first max_examples items, into a single string, separated by \" | \"\n",
     "def join_examples(examples: List[str], max_examples: int) -> str:\n",
     "    return \" | \".join(ex.strip() for ex in examples[:max_examples] if ex and ex.strip())\n",
     "\n",
+    "# Following function keeps the beginning and the end, and replaces the middle with '...' , when a string is too long.\n",
     "def shorten_text_by_chars(txt: str, max_chars: int) -> str:\n",
     "    if len(txt) <= max_chars:\n",
     "        return txt\n",
@@ -137,6 +139,7 @@
     "    tail = max_chars - head - 3\n",
     "    return txt[:head] + \"...\" + txt[-tail:]\n",
     "\n",
+    "# Following function builds labeled text blocks\n",
     "def make_segments(rule: str,\n",
     "                  pos: List[str],\n",
     "                  neg: List[str],\n",
@@ -155,6 +158,7 @@
     "        primary.append(TEMPLATE_POS.format(examples=join_examples(pos_short, pos_keep)))\n",
     "    if neg_short:\n",
     "        primary.append(TEMPLATE_NEG.format(examples=join_examples(neg_short, neg_keep)))\n",
+    "    \n",
     "    primary.append(TEMPLATE_COMMENT.format(comment=(comment or \"\").strip()))\n",
     "\n",
     "    extras = []\n",
@@ -165,21 +169,14 @@
     "\n",
     "    return primary, extras\n",
     "\n",
+    "# Following function builds a single string from segments, making sure the tokenized length ≤ max_length\n",
     "def encode_with_budget(tokenizer: AutoTokenizer,\n",
     "                       rule: str,\n",
     "                       pos: List[str],\n",
     "                       neg: List[str],\n",
     "                       comment: str,\n",
     "                       max_length: int = 256) -> Dict[str, List[int]]:\n",
-    "    \"\"\"\n",
-    "    Budgeting:\n",
-    "      1) Always include full RULE\n",
-    "      2) Ensure 1 short POS and 1 short NEG if available\n",
-    "      3) Add COMMENT (shrink if needed)\n",
-    "      4) Add extra POS/NEG only if room remains\n",
     "\n",
-    "    We let the tokenizer add special tokens automatically.\n",
-    "    \"\"\"\n",
     "    primary, extras = make_segments(rule, pos, neg, comment)\n",
     "\n",
     "    assembled: List[str] = []\n",
@@ -191,7 +188,7 @@
     "            assembled.append(seg)\n",
     "            continue\n",
     "\n",
-    "        # If comment is the issue, progressively shrink it\n",
+    "        # If comment is the issue, progressively shrink it; If still too long, we skip comment.\n",
     "        if seg.startswith(\"COMMENT:\"):\n",
     "            body = seg[len(\"COMMENT: \"):]\n",
     "            for keep in [800, 600, 400, 300, 200, 160, 120, 100, 80, 60]:\n",
@@ -201,8 +198,7 @@
     "                if len(ids2) <= max_length:\n",
     "                    assembled.append(shrunk)\n",
     "                    break\n",
-    "            # else: if still too long, we skip comment (rare)\n",
-    "\n",
+    "            \n",
     "    # Try to append extras if space remains\n",
     "    for seg in extras:\n",
     "        tentative = \"\\n\".join(assembled + [seg])\n",
@@ -241,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "02b277ed",
    "metadata": {},
    "outputs": [
@@ -310,7 +306,7 @@
     "    train_df, test_size=0.2, random_state=RANDOM_SEED, stratify=train_df[\"rule_violation\"]\n",
     ")\n",
     "\n",
-    "# HF Datasets from pandas (keeps columns as-is)\n",
+    "# HF Datasets from pandas \n",
     "hf_train = Dataset.from_pandas(train_split_df.reset_index(drop=True))\n",
     "hf_val   = Dataset.from_pandas(val_split_df.reset_index(drop=True))\n",
     "hf_test  = Dataset.from_pandas(test_df.reset_index(drop=True))\n"
